# python-packing-explainer

./: .gitignore  README.md
examples/pipfile_example/: Dockerfile  Pipfile  README.md  docker-compose.yml
examples/poetry_example/: Dockerfile  README.md  development.ini  docker-compose.yml  pyproject.toml
examples/requirements_txt_example/: Dockerfile  README.md  docker-compose.yml  main.py
examples/requirements_txt_example/tests/: test_app.py
examples/setuptools_example/: Dockerfile  README.md  development.ini  docker-compose.yml  setup.cfg  setup.py
examples/setuptools_example/src/my_app/: __init__.py
examples/setuptools_example/tests/: test_app.py
