[tool.poetry]
name = "poetry_example"
version = "0.1.0"
description = "Simple application to show using poetry for projects"
authors = ["Nick Beeuwsaert"]
license = "MIT"
packages = [
    { include = "my_app", from = "src" }
]

[tool.poetry.plugins."paste.app_factory"]
"main" = "my_app:main"

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^2.0"
waitress = "^1.4.4"

pytest = { version = "^6.2.2", optional = true }

[tool.poetry.extras]
test = [
    "pytest"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
