[metadata]
name = my_application
version = 0.1
description = Demo project to show using setup.cfg
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
install_requires =
    pyramid==2.0
    waitress==1.4.4

[options.extras_require]
test = 
    pytest==6.2.2

[options.packages.find]
where = src

[options.entry_points]
paste.app_factory =
    main = my_app:main
